# obs-studio

./: CMakeLists.txt  azure-pipelines.yml
UI/: qt-display.cpp  window-basic-main.cpp  window-basic-preview.cpp
UI/forms/: OBSBasicSettings.ui
libobs/: obs-internal.h  obs-scene.c  obs-source-deinterlace.c  obs-source-transition.c  obs-source.c  obs-video.c  obs.c  obs.h
libobs-d3d11/: d3d11-rebuild.cpp  d3d11-shaderprocessor.cpp  d3d11-stagesurf.cpp  d3d11-subsystem.cpp  d3d11-subsystem.hpp  d3d11-texture2d.cpp  d3d11-texture3d.cpp
libobs-opengl/: gl-cocoa.m  gl-shader.c  gl-shaderparser.c  gl-stagesurf.c  gl-subsystem.c  gl-subsystem.h  gl-windows.c  gl-x11.c
libobs/data/: area.effect  bicubic_scale.effect  bilinear_lowres_scale.effect  default.effect  deinterlace_base.effect  format_conversion.effect  lanczos_scale.effect  premultiplied_alpha.effect
libobs/graphics/: device-exports.h  graphics-ffmpeg.c  graphics-imports.c  graphics-internal.h  graphics.c  graphics.h  shader-parser.h  texture-render.c
libobs/media-io/: video-matrices.c  video-scaler-ffmpeg.c
plugins/: CMakeLists.txt
plugins/image-source/: color-source.c  image-source.c
plugins/mac-avcapture/: av-capture.mm
plugins/mac-capture/: mac-window-capture.m
plugins/obs-ffmpeg/: ffmpeg-encoded-output.c  jim-nvenc.c  obs-ffmpeg-mux.c  obs-ffmpeg-nvenc.c  obs-ffmpeg-output.c
plugins/obs-filters/: CMakeLists.txt  gpu-delay.c  new-chroma-key-filter.c  obs-filters.c  scale-filter.c
plugins/obs-x264/: obs-x264.c
plugins/picoscope-source/: CMakeLists.txt  picoscope-source.c
(+10 files in other folders)
